src/parser/snapshots/rested__parser__error__tests__expecting_identifier_or_string_lit_after_header_name.snap
---
source: src/parser/error.rs
expression: error
---
ParserErrors {
    errors: [
        get http://localhost { header "name" }
                                             ≈
                                             ↳ [1:38] expected either one of 'string','identifier','string' but got }
        ,
    ],
    incomplete_rogram: Program {
        items: [
            Request {
                method: GET,
                endpoint: Url(
                    Literal {
                        value: "http://localhost",
                        span: Span {
                            start: Location {
                                line: 0,
                                col: 4,
                            },
                            end: Location {
                                line: 0,
                                col: 20,
                            },
                        },
                    },
                ),
                block: None,
                span: Span {
                    start: Location {
                        line: 0,
                        col: 0,
                    },
                    end: Location {
                        line: 0,
                        col: 20,
                    },
                },
            },
        ],
    },
}
